--- a/index.html
+++ b/index.html
@@ -45,23 +45,22 @@
 						height:Math.random()*300
 					},3000, function() {
 						roti2+=Math.random()*1080;
-						animateOUT();
+						sqGroup.selectAll(".sqJ")
+						.animate({
+							transform:"R"+roti2,
+							width:Math.random()*300,
+							height:Math.random()*300
+						},2000,function() {
+							roti2+=Math.random()*1080;
+							animateIN();
+						});
 					});
+					sqGroup.selectAll(".sqJ")
+							.animate({
+								fill: "#FFFFFF"
+							},120000);
 			}
-
 			/*function animateOUT() {
-				for(i=0;i<squares.length;i++) {
-					squares[i].stop().animate({
-						transform:"R"+roti2+","+squares[i].j+","+squares[i].i,
-						width:0,
-						height:0
-					},1000,function() {
-						roti2+=32;
-						animateIN();
-					});
-				}
-			}*/
-			function animateOUT() {
 					sqGroup.selectAll(".sqJ")
 						.animate({
 							transform:"R"+roti2,
@@ -71,16 +70,16 @@
 							roti2+=Math.random()*1080;
 							animateIN();
 						});
-			}
-			for(j=100;j<=1000;j+=150) {
-				for(i=100;i<=700;i+=150) {
+			}*/
+			for(j=100;j<=1000;j+=Math.random()*150) {
+				for(i=100;i<=700;i+=Math.random()*500) {
 					squares[cont] = s.rect(j,i,20,20);
 					sqGroup.add(squares[cont]);
 					squares[cont].j = j;
 					squares[cont].i = i;
 					squares[cont].attr({
 						//fill: randColor(),
-						fill: "#FF2536",
+						fill: "#000000",
 						stroke: "#000",
 						strokeWidth: 3,
 						class:"sqJ"
