console log for the corrected color

--- a/circsNow.html
+++ b/circsNow.html
@@ -21,7 +21,8 @@
 				var rgbG = rgbG.toString(16);
 				var rgbB = Math.round(Math.random() * 255);
 				var rgbB = rgbG.toString(16);
-				return "#"+rgbR+rgbG+rgbB;
+				console.log("#"+""+rgbR+""+rgbG+""+rgbB);
+				return "#"+""+rgbR+""+rgbG+""+rgbB;
 			}
 
 			function animateIN() {
