--- a/circsNow.html
+++ b/circsNow.html
@@ -30,14 +30,14 @@
 					r:Math.random()*100,
 					fill: randColor(),
 					fillOpacity: Math.random()
-				},3000, function() {
+				},Math.random() * 3000, function() {
 					roti2+=Math.random()*1080;
 					sqGroup.selectAll(".sqJ")
 					.animate({
 						r:Math.random()*100,
 						fill: randColor(),
 						fillOpacity: Math.random()
-					},2000,function() {
+					},Math.random() * 2000,function() {
 						roti2+=Math.random()*1080;
 						animateIN();
 					});
