--- a/circsNow.html
+++ b/circsNow.html
@@ -46,6 +46,7 @@
 			for(j=-50;j<=2000;j+=80) {
 				for(i=-50;i<=2000;i+=80) {
 					squares[cont] = s.circle(j,i,0);
+					squares[cont].drag();
 					sqGroup.add(squares[cont]);
 					squares[cont].j = j;
 					squares[cont].i = i;
